| Bug #20575 | multi node stop when issuing wrong nodeid's hangs | ||
|---|---|---|---|
| Submitted: | 20 Jun 2006 17:17 | Modified: | 2 Nov 2006 7:11 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.0-> | OS: | |
| Assigned to: | Bugs System | Target Version: | |
[20 Jun 2006 17:17]
Tomas Ulin
[15 Sep 2006 13:18]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12005 ChangeSet@1.2250, 2006-09-15 19:17:41+08:00, gni@dev3-127.(none) +3 -0 BUG#20575 If the stopped node ids are transmitted to ndbd, the following start, stop and restart operations aren't execute correctly
[19 Sep 2006 10:26]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/12189 ChangeSet@1.2250, 2006-09-19 16:25:31+08:00, gni@dev3-127.(none) +3 -0 BUG#20575 If the stopped node ids are transmitted to ndbd, the following start, stop and restart operations aren't execute correctly
[10 Oct 2006 20:32]
Jonas Oreland
pushed into 5.1.12
[1 Nov 2006 15:38]
Jonas Oreland
pushed into 5.0.29
[2 Nov 2006 7:11]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix for 5.0.29/5.1.12.
[4 Nov 2006 4:14]
Jon Stephens
*Fix for 5.0 documented in 5.0.30 Release Notes.*
