BUG#20575 If the stopped node ids are transmitted to ndbd,           the following start, stop and restart operations aren't execute correctly